--- a/config/west.yml
+++ b/config/west.yml
@@ -27,5 +27,6 @@ manifest:
       remote: pite1222
     - name: zmk-rgbled-widget
       remote: caksoylar
+      revision: v0.3
   self:
     path: config
